# MAWS

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/api/: gameApi.ts
app/src/components/game/: ActionRail.tsx  DialoguePanel.tsx  GameHero.tsx  GameOverScreen.tsx  GameStartAnimation.tsx  HousePlot.tsx  PhaseTransition.tsx  PlayerToken.tsx  RoleSprite.tsx  StatusBoard.tsx  TownWorld.tsx  statusSelectors.ts
app/src/data/: gameData.ts
app/src/styles/: game.css
app/src/types/: gameTypes.ts
backend/: const.py  main.py
frontend/: index.html  script.js  style.css
prompts/: agent_template.txt  hunter_role.txt  seer_role.txt  villager_role.txt  werewolf_role.txt  witch_role.txt
src/: agent.py  agent_tools.py  game_control.py  game_engine.py  logger.py  main.py  models_adapter.py  rulebook.py  utils.py
src/mcp_tools/: __init__.py  client.py  executor.py  server.py
tests/: README.md  run_model_test.py  test_models_adapter.py  test_real_model_calls.py
